--- a/settings/helpTemplates/common.html
+++ b/settings/helpTemplates/common.html
@@ -4,3 +4,12 @@
     <link href="style.css" type="text/css" rel="stylesheet"> 
   </head>
 </#macro>
+
+<#macro headerInfo>
+    <p class="see-also">See also <a href="index.html">Main index</a> | <a href="http://www.broadinstitute.org/gsa/wiki/index.php/The_Genome_Analysis_Toolkit">GATK wiki</a> | <a href="http://getsatisfaction.com/gsa">GATK support forum</a></p>
+    <p class="version">GATK version ${version} built at ${timestamp}.</p>
+</#macro>
+
+<#macro footerInfo>
+</#macro>
+
