--- a/settings/helpTemplates/generic.index.template.html
+++ b/settings/helpTemplates/generic.index.template.html
@@ -25,9 +25,12 @@
 <@makeHeader title="GATK documentation index"/>
 <body>
   <h1>GATK documentation index</h1>
+  <@headerInfo />
   <#list groups as group>
     <@emitGroup group=group/>
   </#list>
+  
+  <@footerInfo />
 </body>
 </html>
 
