Cleanup emuns and tables

--- a/settings/helpTemplates/generic.index.template.html
+++ b/settings/helpTemplates/generic.index.template.html
@@ -1,7 +1,7 @@
 <#include "common.html"/>
 
 <#macro emitGroup group>
-  <table border="1" cellpadding="2" width="100%">
+  <table id="hor-minimalist-b">
   <h2>${group.name}</h2>
   <p>
   ${group.summary}  
