--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -2,11 +2,10 @@
 
 <#macro argumentlist name myargs>
     <#if myargs?size != 0> 
-        <tr><th colspan="4"><b>${name}</b></th></tr>
+        <tr><th colspan="3" id="row-divider">${name}</th></tr>
         <#list myargs as arg>
             <tr>
                 <td><a href="#${arg.name}">${arg.name}</a></td>
-                <td><a href="#${arg.name}">${arg.synonyms!""}</a></td>
                 <td>${arg.type}</td>
                 <td>${arg.summary}</td>
             </tr>
@@ -22,7 +21,7 @@
     (<#if arg.attributes??>${arg.attributes} </#if>${arg.type})</h3>
     ${arg.summary}. ${arg.fulltext}<br>
     <#if arg.options??>
-        <p>The ${arg.name} argument can have one of the following values:</p>
+        <p>The ${arg.name} argument is an enumerated type (${arg.type}), which can have one of the following values:</p>
         <dl class="enum">
         <#list arg.options as option>
             <dt>${option.name}
@@ -70,7 +69,6 @@
       <thead>
       <tr>
          <th>Name</th>
-         <th>Synonyms</th>
          <th>Type</th>
          <th>Summary</th>
       </tr>
