Missing default values are now NA

--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -7,7 +7,7 @@
             <tr>
                 <td><a href="#${arg.name}">${arg.name}</a></td>
                 <td>${arg.type}</td>
-                <td>${arg.defaultValue!"No default"}</td>
+                <td>${arg.defaultValue!"NA"}</td>
                 <td>${arg.summary}</td>
             </tr>
             <#--
