Fixed layout problem with advanced arguments

--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -82,6 +82,7 @@
       <tbody>
          <@argumentlist name="Required" myargs=arguments.required/>
          <@argumentlist name="Optional" myargs=arguments.optional/>
+         <@argumentlist name="Advanced" myargs=arguments.advanced/>
          <@argumentlist name="Hidden" myargs=arguments.hidden/>
          <@argumentlist name="Depreciated" myargs=arguments.depreciated/>
       </tbody>
